Fixed profile icon mobile repsonsiveness

--- a/public/assets-v2/css/style.css
+++ b/public/assets-v2/css/style.css
@@ -8364,7 +8364,7 @@ h4,h3{
     }
 
     #profile-menu-item{
-      padding: 13px 0px !important;
+      padding: 10px 0px 5px 20px !important;
     }
 
     .interview-mode.nice-select{
